@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfce4-appfinder-4.5.92.tar.bz2 326485 RMD160 838a3a2d09792ab5b428ca38407626b6da531e13 SHA1 92d6e635916fc4e44af45764eb1a507cad22aca7 SHA256 dd47739347b6a00e3a5183cdd21d3fed4b6e9d7a2a171b226ac27c781eeb03d5
 DIST xfce4-appfinder-4.5.93.tar.bz2 312564 RMD160 139008a0cda9c9063a4801c9e69946f319f31c6e SHA1 2eb21fe75486552318741dd1d9e1df939e468f65 SHA256 a05c3cd9ba66e63af94c55bf91f32baf3e6c049c8a4618b254613b37a83b42e6
+DIST xfce4-appfinder-4.5.99.1.tar.bz2 316409 RMD160 7382a1e62f37efac824e0b0e67afd1881036fec9 SHA1 6fc8988b1626e136d7acfef4b4321e3e45a2f0e4 SHA256 79684ce92a0de53ac68cc3f440c00e59cfa08c5d19661eb9ac61c3f4354adb3b
 EBUILD xfce4-appfinder-4.5.92.ebuild 587 RMD160 f28c2cb48026f2cd5e808c21d7da4467311e8605 SHA1 9ab4494a602720e2d9c42e2c27fe8058458cbdf6 SHA256 4e1b1372cfde8abb4bae4164b3a40ef379ebc6997adb3dbb18b3b9317164e017
 EBUILD xfce4-appfinder-4.5.93.ebuild 587 RMD160 f28c2cb48026f2cd5e808c21d7da4467311e8605 SHA1 9ab4494a602720e2d9c42e2c27fe8058458cbdf6 SHA256 4e1b1372cfde8abb4bae4164b3a40ef379ebc6997adb3dbb18b3b9317164e017
+EBUILD xfce4-appfinder-4.5.99.1.ebuild 587 RMD160 f28c2cb48026f2cd5e808c21d7da4467311e8605 SHA1 9ab4494a602720e2d9c42e2c27fe8058458cbdf6 SHA256 4e1b1372cfde8abb4bae4164b3a40ef379ebc6997adb3dbb18b3b9317164e017
 EBUILD xfce4-appfinder-9999.ebuild 681 RMD160 52cf7d51b0cdc15d8eac6734328582c109173195 SHA1 50c34b812c22889b192f4f3be765d8aa33cb1956 SHA256 7054b3a0f4df604f54ff46ef05d488a25e149687459572856286ee54015f20df
-MISC ChangeLog 606 RMD160 70353c51dbde56eeb001ef30edafb03fb6a6991d SHA1 8a10f7f669045de53ab46bf5abd8f756302213ab SHA256 7788efe7d3061405f0bbb95576795c6642d54cffa58e629b81524d452827531c
+MISC ChangeLog 751 RMD160 a5ec40eb28b44cf16ca19075a890b0c05b2cbf3f SHA1 a04197473ad1a79633503a278ff6cd199a9d44b0 SHA256 db761e1784c736affa608e471d66aa87fb236e021be776a82345ec17cb2f6e22
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYgACgkQKhnDs22gwa8DewCg11YYg9I2I4EIc90Dr9r4nmNE
-lFEAnR5PGjCEIOzZR5zlT58Q9R6n2RMz
-=yYD0
+iEYEARECAAYFAkl9xdsACgkQKhnDs22gwa+SsACgjKfegb9VWFlbHPc/RaFFvSmr
+WtIAoO0MXMVbeLMhty4u92f6MQndvpi0
+=HcFD
 -----END PGP SIGNATURE-----
